--- a/src/components/Character/characters.module.css
+++ b/src/components/Character/characters.module.css
@@ -12,10 +12,10 @@
 }
 
 .character > img {
-  border-radius: 57% 43% 41% 59% / 22% 30% 70% 78%;
+  border-radius: 61% 39% 70% 30% / 32% 38% 62% 68% ;
 }
 
-.character > div {
+.info {
   position: absolute;
   bottom: 0;
   padding: 1rem;
@@ -34,11 +34,11 @@
   background-color: var(--color-secondary);
 }
 
-.character:hover > div {
+.character:hover > .info {
   opacity: 1;
 }
 
-.character > div > h3, .character > div > span {
+.info > h3, .info > span {
   color: var(--txt-inverse);
   font-size: 1.6rem;
   font-style: normal;
@@ -46,8 +46,60 @@
   line-height: 1.9rem;
 }
 
-.character > div > h3 {
+.info > h3 {
   font-size: 1.9rem;
   font-weight: 600;
   line-height: 2.1rem;
+}
+
+.character-skeleton {
+  display: flex;
+  flex-direction: column;
+  gap: 1.2rem;
+  align-items: center;
+  justify-content: center;
+  padding: 1.2rem;
+  position: relative;
+  overflow: hidden;
+  border-radius: 1.6rem;
+  transition: all .3s;
+}
+
+.skeleton {
+  width: 20rem;
+  height: 20rem;
+  background-color: #eee;
+  background-image: linear-gradient(90deg, #eee, #f5f5f5, #eee);
+  background-size: 200px 100%;
+  background-repeat: no-repeat;
+  border-radius: 61% 39% 70% 30% / 32% 38% 62% 68% ;
+  animation: skeleton-animation 1.5s ease-in-out infinite;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  padding: 1.2rem;
+}
+
+@keyframes skeleton-animation {
+  0% {
+    background-position: -300px 0;
+  }
+  100% {
+    background-position: calc(300px + 100%) 0;
+  }
+}
+
+@media (max-width: 768px) {
+  .info {
+    background-color: rgba(255, 255, 255, .5);
+    opacity: 1;
+  }
+
+  .info > h3, .info > span {
+    color: var(--color-primary);
+  }
+
+  .character {
+    background-color: var(--color-primary);
+  }
 }
