--- a/src/components/Home/home.module.css
+++ b/src/components/Home/home.module.css
@@ -39,21 +39,41 @@
   transition: all .3s;
 }
 
-.selector > div > div > button:hover {
+.selector > div > div:not(.selected) > button:hover {
   background-color: var(--color-blur);
+  color: var(--txt-inverse);
+}
+
+.selected {
+  background-color: var(--color-primary);
+}
+
+.selected > button {
+  color: var(--txt-inverse) !important;
 }
 
 .active {
   display: flex !important;
 }
 
+.list {
+  display: flex;
+  padding: 0;
+  transition: all .2s;
+  overflow: hidden;
+  position: relative;
+  z-index: 1;
+}
+
 .rows {
   display: flex;
   flex-direction: row;
   padding: 1.6rem;
-  justify-content: flex-start;
+  justify-content: center;
   align-items: center;
   gap: 3.5rem;
   max-width: 100%;
   flex-wrap: wrap;
+  transition: all .5s;
+  overflow: hidden;
 }
