--- a/src/components/Navbar/navbar.module.css
+++ b/src/components/Navbar/navbar.module.css
@@ -9,6 +9,7 @@
   padding: 1.6rem 2rem;
   background-color: var(--color-primary);
   width: 100dvw;
+  box-shadow: 0px 2px 6px 0px rgba(42, 50, 63, 0.10);
 }
 
 .navbar > div {
@@ -31,7 +32,7 @@
   filter: brightness(0) saturate(100%) invert(68%) sepia(30%) saturate(267%) hue-rotate(81deg) brightness(89%) contrast(88%);
 }
 
-.navbar > div > h1 {
+.navbar > div > a {
   color: var(--color-blur);
   font-size: 2.2rem;
   font-style: normal;
@@ -39,4 +40,18 @@
   line-height: 3.2rem;
   flex: 1 0;
   text-align: left;
+}
+
+@media (max-width: 768px) {
+  .navbar > div:last-child {
+    display: none;
+  }
+
+  .navbar > div:nth-child(2) {
+    justify-content: flex-end;
+  }
+
+  .navbar {
+    padding: 1.2rem;
+  }
 }
