--- a/src/components/ui/InputFilter/input-filter.module.css
+++ b/src/components/ui/InputFilter/input-filter.module.css
@@ -3,11 +3,10 @@
   align-items: center;
   flex: 1 0 0;
   position: relative;
-  min-width: 17rem;
+  max-width: 17rem;
   align-self: stretch;
   background-color: var(--txt-inverse);
   padding: 0;
-  gap: 0.8rem;
   border-radius: 1.6rem;
   overflow: hidden;
 }
@@ -16,6 +15,7 @@
   background-color: transparent;
   padding: 0.8rem 1.6rem;
   outline: none;
+  max-width: calc(100% - 4rem);
 
   color: var(--txt-primary);
   font-size: 1.5rem;
