documentation and test with jest

--- a/src/app/page.module.css
+++ b/src/app/page.module.css
@@ -5,6 +5,6 @@
   justify-content: flex-start;
   flex: 1 0 0;
   align-self: stretch;
-  overflow-y: scroll;
+  /* overflow-y: scroll; */
   background-color: var(--color-tertiary);
 }
