--- a/src/components/CharacterPage/Profile/profile.module.css
+++ b/src/components/CharacterPage/Profile/profile.module.css
@@ -165,12 +165,11 @@
   display: flex;
   flex-direction: column;
   justify-content: center;
-  align-items: flex-start;
+  align-items: center;
   padding: 0;
   gap: .2rem;
   font-weight: 500;
   font-size: 1.5rem;
-  line-height: 2rem;
   letter-spacing: 0.01rem;
   /* yimi/day/text/primary */
   color: var(--txt-inverse);
