--- a/src/components/Navbar/navbar.module.css
+++ b/src/components/Navbar/navbar.module.css
@@ -1,7 +1,4 @@
 .navbar {
-  position: sticky;
-  top: 0;
-  left: 0;
   display: flex;
   align-self: stretch;
   align-items: center;
@@ -10,6 +7,8 @@
   background-color: var(--color-primary);
   width: 100dvw;
   box-shadow: 0px 2px 6px 0px rgba(42, 50, 63, 0.10);
+  position: relative;
+  z-index: 4;
 }
 
 .navbar > div {
